fixed search button misalignment issue

--- a/frontend/src/components/subcomponents/SearchForm.css
+++ b/frontend/src/components/subcomponents/SearchForm.css
@@ -1,11 +1,18 @@
-#search-form-onSubmit {
+.search-form {
+	margin-right: var(--nav-button-margin);
+
+	height: 100%;
+	width: 100%;
+}
+
+.search-bar-universal {
 	display: flex;
     justify-content: flex-end;
 	align-items: center;
 
     position: relative;
 
-	margin-right: var(--nav-button-margin);
+	/* margin-right: var(--nav-button-margin); */
 
 	height: 100%;
 	width: 100%;
@@ -46,20 +53,24 @@
 }
   
 #search-button {
-	cursor: pointer;
-	right: var(--search-button-margin);
-	position: absolute;
-	fill: var(--font-color);
-	text-decoration: none;
-	transition: color 0.2s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
+	position: absolute;
+	right: var(--search-button-margin);
+
+	fill: var(--font-color);
+	transition: color 0.2s;
 	background-color: var(--search-bar-grey-1);
 
-	border: none;
-	border-radius: 50px;
+	text-decoration: none;
+	text-align: center;
 
 	font-size: 1rem;
-	text-align: center;
+
+	border: none;
+	border-radius: 50%;
 
 	height: calc(90% - var(--search-button-margin) * 2);
 	width: auto;
@@ -120,5 +131,152 @@
 	width: auto;
 	aspect-ratio: 1/1;
 	/* padding: 8px 16px; */
+
+}
+
+/* Mobile Header View */
+
+@media (max-width: 787px) {
+
+	.nav-r-auth-cart-box {	
+		margin-right: 0px !important;
+	} 
+
+	#search-form-onSubmit.active {
+		width: 100%;
+	}
+
+	#mobile-search-button {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	
+		color: var(--font-color);
+		background-color: var(--base-color);
+	
+		text-decoration: none;
+		text-align: center;
+	
+		font-size: var(--icon-size);
+	
+		transition: color 0.2s;
+		
+		border: none;
+		border-radius: 50%;
+	
+		height: var(--button-size);
+		width: auto;
+		aspect-ratio: 1/1;
+		padding: 8px 16px;
+	}
+
+	#mobile-search-button:hover {
+		color: var(--font-color);
+		background-color: var(--button-hover-grey-1);
+	
+		text-decoration: none;
+	
+		font-size: var(--icon-size);
+		font-weight: bold;
+		
+		cursor: pointer;
+		
+		border: none;
+		border-radius: 50%;
+	
+	}
+
+	#mobile-search-button.active {
+		display: none;
+	}
+
+	#mobile-search-close:not(.active) {
+		opacity: 0;
+		width: 0;
+		height: 0;
+		padding: 0;
+	}
+
+
+	#search-bar:not(.active), #search-button:not(.active) {
+		opacity: 0;
+		width: 0;
+		height: 0;
+		padding: 0;
+		transition: width 0.5s ease;
+	}
+
+	#search-bar.active, #search-bar.active:valid {
+		opacity: 1;
+		padding: 8px 16px;
+		border: none;
+		border-left: 5px solid transparent; /* Transparent left border to create the semi-circle */
+		border-right: 5px solid transparent; /* Transparent right border to create the semi-circle */
+		border-radius: 50px;
+		
+		font-size: 14px;
+	
+		background-color: var(--search-bar-grey-1);
+		color: var(--search-bar-grey-2);
+	
+		height: 90%;
+		width: 100%;
+		margin: auto;
+		/* transition: width 0.5s ease; */
+		outline: none;	
+	}
+
+	#search-bar.active:valid {
+		color: black;
+	}
+	
+	#search-bar.active:hover,
+	#search-bar.active:hover + #search-button.active,
+	#search-bar.active:hover:valid {
+		background-color: var(--search-bar-grey-2);
+		fill: var(--font-color);
+	}
+
+	#search-bar.active:hover::placeholder {
+		background-color: var(--search-bar-grey-2);
+		color: var(--search-bar-grey-3);
+	}
+
+	#search-bar.active:hover:valid {
+		color: black;
+	}
+
+	#search-button.active:hover {
+		fill: black;
+
+		background-color: var(--search-bar-grey-2);
+		border: none;
+		cursor: pointer;
+
+		width: auto;
+		aspect-ratio: 1/1;
+	}
+
+	#search-button.active {
+		display: block;
+		cursor: pointer;
+		right: var(--search-button-margin);
+		position: absolute;
+		fill: var(--font-color);
+		text-decoration: none;
+		transition: color 0.2s;
+	
+		background-color: var(--search-bar-grey-1);
+	
+		border: none;
+		border-radius: 50px;
+	
+		font-size: 1rem;
+		text-align: center;
+	
+		height: calc(90% - var(--search-button-margin) * 2);
+		width: auto;
+		aspect-ratio: 1/1;
+	}
 
 }
